# rupass

./: .gitignore  Cargo.toml  README.md  banner.txt  build.rs
proto/: pwd.proto
src/: main.rs
src/cli/: cli.rs  mod.rs  parse_cmd.rs  util.rs
src/pb/: mod.rs  pwd.rs
