[package]
authors = ["li_jing"]
name = "rupass"
version = "0.1.1"
edition = "2021"
description = "This is a command line and geek style password manager written in Rust."
license = "MIT/Apache-2.0"
homepage = "https://github.com/lijing-2008/rupass"
repository = "https://github.com/lijing-2008/rupass"
keywords = ["cli", "commandline", "password_manager"]
readme = "README.md"
documentation = "https://docs.rs/rupass/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
sled = "0.34"
anyhow = "1.0"
inquire = { version = "0.2.1", features = ["date"] }
dirs = "4"
zerocopy = "0.6"
byteorder = "1.4"
prost = "0.10"
bytes = "1"
dashmap = "5"

[build-dependencies]
prost-build = "0.10"


